# flowstate-runner

./: .editorconfig  .gitignore  .gitleaks.toml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  NOTICE  README.md  SECURITY.md
.githooks/: pre-commit
src/: attributes.rs  cache.rs  cli.rs  conditions.rs  config.rs  context.rs  error.rs  executor.rs  health.rs  lib.rs  logging.rs  main.rs  output.rs  resumer.rs  scanner.rs  state.rs  template.rs
src/agent/: anthropic_api.rs  claude_cli.rs  mod.rs
src/auth/: mod.rs  token_exchanger.rs
src/clients/: mcp.rs  mod.rs  obs.rs  rest.rs
src/handlers/: action.rs  agent_task.rs  approval.rs  decision.rs  delay.rs  end.rs  human_task.rs  mod.rs  notification.rs  start.rs  subprocess.rs
src/models/: agent.rs  approval.rs  execution.rs  mod.rs  process.rs  trigger.rs
tests/: agent_cli_test.rs  attributes_test.rs  cli_test.rs  conditions_test.rs  config_test.rs  context_test.rs  error_test.rs  execution_model_test.rs  executor_test.rs  handlers_test.rs  health_test.rs  integration_test.rs  mcp_client_test.rs  models_execution_test.rs  models_process_test.rs  models_state_test.rs  models_supporting_test.rs  models_trigger_test.rs  obs_client_test.rs  output_test.rs  rest_client_test.rs  resumer_test.rs  scanner_test.rs  state_conversion_test.rs  template_test.rs
tests/handlers/: action_test.rs  agent_task_test.rs  approval_test.rs  decision_test.rs  delay_test.rs  dispatch_test.rs  end_test.rs  human_task_test.rs  mod.rs  notification_test.rs  start_test.rs  subprocess_test.rs
